# mc_clone

./: CMakeLists.txt  README.md  build_run.sh  install_deps.sh  todo.txt
cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
include/GLAD33/: glad.c  glad.h
lib/: libcglm.so.0.9.5
src/: camera.c  chunk.c  file.c  image.c  main.c  menu.c  pointer.c  shader.c  sky.c  sort_chunk.c  test_block.c  world.c
src/headers/: camera.h  chunk.h  file.h  image.h  menu.h  mesh.h  pointer.h  shader.h  sky.h  sort_chunk.h  test_block.h  tex_coords.h  world.h
src/shaders/: block_shader.frag  block_shader.vert  crosshair_shader.frag  crosshair_shader.vert  menu_shader.vert  sky_shader.frag  sun_shader.frag  sun_shader.vert
